sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:4: error: not found: value getNombreValeur
  while(i<=getNombreValeur-3){
           ^