sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i=0
  while(i<=getNombreValeur-3){
    if (i>=0)
    i+=1
    else if (plusPetit(i+1,i+2))
    	i+=1
    else {
      echange(i+1,i+2)
      i-=1
    }	
  }
}